--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,12 +21,13 @@ h1{
     width: 263px;
     margin: 0 auto;
     padding: 0;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     font-family: 'Poller One', cursive;
     color: black;
     font-size: 36px;
     text-align: center;
     line-height: 37px;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.356);
 }
 
 header img{
@@ -41,6 +42,7 @@ h2{
     color: black;
     font-family: 'Poller One', cursive;
     text-align: center;
+    box-shadow: 4px 4px 4px rgba(255, 255, 255, 0.185);
 }
 h3{
     font-weight: 800;
@@ -115,8 +117,9 @@ section{
     padding: 20px;
     background-color: rgb(0, 0, 0);
     color: white;
-    text-align: justify;
     line-height: 30px;
+    border-right: solid 1px rgba(255, 255, 255, 0.089);
+    border-left: solid 1px rgba(255, 255, 255, 0.089);
 }
 .accueil img{
     width: 20%;
@@ -260,14 +263,14 @@ footer h2{
 
 @media screen and (min-width : 494px){
     nav li{
-        width: 89px;
+        width: 100px;
         text-align: center;
         padding: 10px;
         transition: 0.3s; 
     }
     nav li:hover{        
-        border-left: solid 1px white;
-        border-right: solid 1px white;
+        border-left: solid 5px rgba(255, 255, 255, 0.100);
+        border-right: solid 5px rgba(255, 255, 255, 0.100);
         transition: 0.3s; 
     }
     .bio{
