--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,6 +58,7 @@ nav.une {
     background-color: black;
     position: fixed;
     top: 0;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.219)
 }
 
 .menuNav{
@@ -131,15 +132,13 @@ section{
     margin: auto;
 }
 .musicien img{
-    width: 204px;
+    width: 90%;
     height: 158px;
     object-fit: contain;
-    padding: 10px;
+    padding: 20px 10px 10px;
 }
 .groupe img{
-    width: 304px;
-    height: 200px;
-    object-fit: contain;
+    width: 100%;
 }
 .agenda{
     text-align: center;
@@ -273,10 +272,12 @@ footer h2{
     background-color: black;
     color: white;   
     box-shadow: none;
+    font-size: large;
 }
 
 #rights{
     font-size: 1em;
+    line-height: 23px;
 }
 
 #rights button{
@@ -286,6 +287,9 @@ footer h2{
     margin: 0 auto;
     font-size: 1em;
     color: white;
+}
+#rights button:hover{
+    cursor: pointer;
 }
 
 
@@ -301,6 +305,9 @@ footer h2{
 
     .accueil{
         background-color: rgba(0, 0, 0, 0);
+    }
+    .dropdown{
+        width: 150px;
     }
 }
 
@@ -387,6 +394,9 @@ footer h2{
         width: 50%;
         margin: 20px auto;
     }
+    footer h2{
+        font-size: x-large;
+    }
 }
 
 @media screen and (min-width : 1020px){
@@ -400,6 +410,7 @@ footer h2{
         font-size: 68px;
     }
     .musicien img{
+        width: 234px;
         float: left;
     }
     .musicien p {
